[Chore]: Bug Padding on mobile landing page

--- a/assest/css/responsiveness.css
+++ b/assest/css/responsiveness.css
@@ -41,7 +41,7 @@
     gap: 0.8rem;
   }
 
-  .hero h2 {
+  .small {
     font-size: 1.5rem;
   }
 
